DOC-2349: Swap to `npm run dev`

--- a/modules/ROOT/partials/integrations/react-quick-start.adoc
+++ b/modules/ROOT/partials/integrations/react-quick-start.adoc
@@ -607,7 +607,7 @@ endif::[]
 +
 [source,sh]
 ----
-npm run start
+npm run dev
 ----
 
 * To stop the development server, select on the command line or command prompt and press _Ctrl+C_.
