DOC-2351: remove nightly builds, update variable for docker.

--- a/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-api-usage.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-api-usage.adoc
@@ -24,7 +24,7 @@ const data = {
   css: 'p { color: red; }',
   options: {
     extra_http_headers: {
-      authorization: 'Bearer auth_key'
+      authorization: 'Bearer <replace_with_your_auth_key>'
     }
   }
 };
