--- a/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-installation.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-installation.adoc
@@ -12,13 +12,6 @@ It can be run with any Open Container runtime tool e.g. link:https://kubernetes.
 
 Refer to the xref:individual-export-to-pdf-on-premises.adoc#requirements[Requirements guide] for more information about the hardware and software requirements to run the {pluginname} On-Premises.
 
-//do we have a helm chart that we can link to?
-=== Setting up the application using Kubernetes with Helm charts
-
-Use the provided Helm chart to set up the {pluginname} On-Premises.
-
-More instructions and the Helm chart you will find in our repository.
-
 === Setting up the application using a Docker container
 
 . Use instructions from the {productname} Ecosystem customer dashboard to log into the {pluginname} On-Premises (PDF converter) Docker registry and pull the Docker image.
@@ -34,14 +27,14 @@ Launch the Docker container:
 docker run --init -p 8080:8080 -e LICENSE_KEY=[your_license_key] {dockerimageexporttopdf}:[version]
 ----
 
-If you want to use authorization you should provide SECRET_KEY:
+If using authorization provide the SECRET_KEY:
 
 [source, sh, subs="attributes+"]
 ----
 docker run --init -p 8080:8080 -e LICENSE_KEY=[your_license_key] -e SECRET_KEY=[your_secret_key] {dockerimageexporttopdf}:[version]
 ----
 
-You can read more about using authorization in the xref:individual-export-to-pdf-on-premises.adoc#authorization[authorization] section.
+Read more about using authorization in the xref:individual-export-to-pdf-on-premises.adoc#authorization[authorization] section.
 
 ==== Containerize example using docker-compose
 
@@ -76,14 +69,14 @@ docker-compose up
 [NOTE]
 ====
 * Without a correct `LICENSE_KEY` the application will not start.
-** If the license is invalid, you’ll get a wrong license key error in the logs and the application will not run.
-* You should override the SECRET_KEY variable using a unique and hard to guess string for security reasons.
-* If your infrastructure has strict CORS enabled, then you can use the `CUSTOM_REQUEST_ORIGIN` variable to set the origin of requests made by the converter. The default value is `https://pdf-internal`.
+** If the license is invalid, a wrong license key error will display in the logs and the application will not run.
+* It is advisable to override the SECRET_KEY variable using a unique and hard to guess string for security reasons.
+* If the specific infrastructure has strict CORS enabled, then use the `CUSTOM_REQUEST_ORIGIN` variable to set the origin of requests made by the converter. The default value is `https://pdf-internal`.
 ====
 
 === Windows fonts support
 
-If you want to use Windows fonts like Calibri, Verdana, etc. in your PDF files, you can use the `pdf-converter-windows` Docker image and run it on a Windows operating system.
+If using Windows fonts like Calibri, Verdana, etc. in PDF files, use the `pdf-converter` Docker image and run it on a Windows operating system.
 
 See xref:individual-export-to-pdf-on-premises.adoc#fonts[Fonts] section for more details.
 
@@ -91,6 +84,6 @@ See xref:individual-export-to-pdf-on-premises.adoc#fonts[Fonts] section for more
 
 Use the link:http://localhost:8080/v1/convert[http://localhost:8080/v1/convert] endpoint to export PDF files. Check out the xref:individual-export-to-pdf-on-premises.adoc#authorization[authorization] section to learn more about tokens and token endpoints.
 
-You can also use the demo page available on link:http://localhost:8080/demo[http://localhost:8080/demo] to generate an example PDF file.
+Use the demo page available on link:http://localhost:8080/demo[http://localhost:8080/demo] to generate an example PDF file.
 
 Refer to the {pluginname} REST API documentation on link:http://localhost:8080/docs[http://localhost:8080/docs] for more details.
