DOC-2349: removed raw-loader and replaced with vite's `?inline` feature

--- a/modules/ROOT/partials/integrations/react-bundling.adoc
+++ b/modules/ROOT/partials/integrations/react-bundling.adoc
@@ -34,9 +34,8 @@ import 'tinymce/plugins/table';
 import 'tinymce/plugins/help';
 
 // Content styles, including inline UI like fake cursors
-/* eslint import/no-webpack-loader-syntax: off */
-import contentCss from '!!raw-loader!tinymce/skins/content/default/content.min.css';
-import contentUiCss from '!!raw-loader!tinymce/skins/ui/oxide/content.min.css';
+import contentCss from 'tinymce/skins/content/default/content.min.css?inline';
+import contentUiCss from 'tinymce/skins/ui/oxide/content.min.css?inline';
 
 export default function TinyEditorComponent(props) {
   // note that skin and content_css is disabled to avoid the normal
