--- a/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-installation.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-installation.adoc
@@ -1,7 +1,7 @@
 [[installation]]
 == Installation
 
-> A valid license key is needed in order to install {productname} On-Premises.
+> A valid license key is needed in order to install {pluginname} On-Premises.
 link:https://www.tiny.cloud/contact/[Contact us] for a trial license key.
 
 === Supported technologies
