update quickstart self-hosted pages to include section about license key. extract the "setting the license" section of license-key.adoc page into a partial for code reuse.

--- a/modules/ROOT/pages/bower-projects.adoc
+++ b/modules/ROOT/pages/bower-projects.adoc
@@ -1,6 +1,6 @@
-= Installing TinyMCE with Bower
+= Installing {productname} with Bower
 :navtitle: Bower projects
-:description: Learn how to install TinyMCE using Bower.
+:description: Learn how to install {productname} using Bower.
 :keywords: bower, javascript, install
 :productSource: bower
 
