--- a/modules/ROOT/pages/cloud-quick-start.adoc
+++ b/modules/ROOT/pages/cloud-quick-start.adoc
@@ -1,7 +1,7 @@
 = Quick start
 :navtitle: Quick start
-:description_short: Setup a basic TinyMCE 6 editor using the Tiny Cloud.
-:description: Get an instance of TinyMCE 6 up and running using the Tiny Cloud.
+:description_short: Setup a basic {productname} {productmajorversion} editor using the {cloudname}.
+:description: Get an instance of {productname} {productmajorversion} up and running using the {cloudname}.
 :keywords: tinymce, script, textarea
 :productSource: cloud
 
