--- a/modules/ROOT/pages/dotnet-projects.adoc
+++ b/modules/ROOT/pages/dotnet-projects.adoc
@@ -1,6 +1,6 @@
-= Installing TinyMCE for .NET
+= Installing {productname} for .NET
 :navtitle: .NET projects
-:description: Learn how to install TinyMCE from NuGet.
+:description: Learn how to install {productname} from NuGet.
 :keywords: nuget .net install
 :productSource: nuget
 
