--- a/modules/ROOT/pages/npm-projects.adoc
+++ b/modules/ROOT/pages/npm-projects.adoc
@@ -1,6 +1,6 @@
-= Installing TinyMCE from NPM
+= Installing {productname} from NPM
 :navtitle: NPM projects
-:description: Learn how to install TinyMCE from NPM using npm and Yarn.
+:description: Learn how to install {productname} from NPM using npm and Yarn.
 :keywords: yarn, npm, javascript, install
 :productSource: npm
 
