--- a/modules/ROOT/pages/php-projects.adoc
+++ b/modules/ROOT/pages/php-projects.adoc
@@ -1,6 +1,6 @@
-= Installing TinyMCE with Composer
+= Installing {productname} with Composer
 :navtitle: PHP projects
-:description: Learn how to install TinyMCE from Packagist using Composer.
+:description: Learn how to install {productname} from Packagist using Composer.
 :keywords: php, composer, packagist, install
 :productSource: composer
 
