--- a/modules/ROOT/pages/zip-install.adoc
+++ b/modules/ROOT/pages/zip-install.adoc
@@ -1,6 +1,6 @@
-= Using TinyMCE from a .zip file
-:navtitle: TinyMCE .zip deployments
-:description: Learn how to use TinyMCE from a .zip archive.
+= Using {productname} from a .zip file
+:navtitle: {productname} .zip deployments
+:description: Learn how to use {productname} from a .zip archive.
 :keywords: zip, archive, unzip, install
 :productSource: zip
 
