--- a/modules/ROOT/pages/release-notes.adoc
+++ b/modules/ROOT/pages/release-notes.adoc
@@ -11,6 +11,12 @@ This section lists the releases for {productname} 7 and the changes made in each
 
 a|
 [.lead]
+xref:7.0.1-release-notes.adoc#overview[{productname} 7.0.1]
+
+Release notes for {productname} 7.0.1
+
+a|
+[.lead]
 xref:7.0-release-notes.adoc#overview[{productname} 7.0]
 
 Release notes for {productname} 7.0
@@ -23,6 +29,6 @@ Release notes for {productname} 7.0
 // 2. When the number of cells in the table is even:
 //    * prepend the inline comment markup to this
 //      element.
-a|
+// a|
 
 |===
