add deprecated to nav.adoc

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -412,6 +412,7 @@
 **** xref:7.0.1-release-notes.adoc#removed[Removed]
 **** xref:7.0.1-release-notes.adoc#bug-fixes[Bug fixes]
 **** xref:7.0.1-release-notes.adoc#security-fixes[Security fixes]
+**** xref:7.0.1-release-notes.adoc#deprecated[Deprecated]
 **** xref:7.0.1-release-notes.adoc#known-issues[Known issues]
 *** TinyMCE 7.0
 **** xref:7.0-release-notes.adoc#overview[Overview]
