--- a/-new-material-templates/release-notes-template/ROOT/nav.adoc
+++ b/-new-material-templates/release-notes-template/ROOT/nav.adoc
@@ -17,6 +17,7 @@
 **** xref:<x.y[.z]>-release-notes.adoc#removed[Removed]
 **** xref:<x.y[.z]>-release-notes.adoc#bug-fixes[Bug fixes]
 **** xref:<x.y[.z]>-release-notes.adoc#security-fixes[Security fixes]
+**** xref:<x.y[.z]>-release-notes.adoc#deprecated[Deprecated]
 **** xref:<x.y[.z]>-release-notes.adoc#known-issues[Known issues]
 
 // This file is instructional and is never included in the published name-space.
