--- a/modules/ROOT/pages/7.0.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.0.1-release-notes.adoc
@@ -60,6 +60,21 @@ For information on the **<Open source plugin name>** plugin, see xref:<plugincod
 
 The following premium plugin updates were released alongside {productname} {release-version}.
 
+=== Mentions
+
+The {productname} {release-version} release includes an accompanying release of the **Mentions** premium plugin.
+
+This **Mentions** release includes the following fix.
+
+=== Tapping inside a composed text on Firefox Android would not close the autocompleter.
+// #TINY-10715
+
+Previously in **Mentions**, when typing Korean on Firefox Android and moving the caret inside the word being typed, the auto completer menu did not close. This issue was caused by Gboard triggering an extra input even after the composition had ended. As a result, the autocompleter mistakenly interpreted it as the user starting to type again.
+
+In {productname} {release-version}, this issue has been fixed. Now, the autocompleter menu is properly closed when tapping inside the word being typed on Firefox Android.
+
+For information on the **Mentions** plugin, see: xref:mentions.adoc[Mentions].
+
 === <Premium plugin name 1> <Premium plugin name 1 version>
 
 The {productname} {release-version} release includes an accompanying release of the **<Premium plugin name 1>** premium plugin.
