--- a/modules/ROOT/pages/7.0.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.0.1-release-notes.adoc
@@ -85,7 +85,7 @@ Previously in {productname}, the **Table of Contents** (ToC) header was encoded 
 
 To address this issue, the HTML encoding has been removed. As a result, the ToC header now renders correctly as HTML even after refreshing, displaying as intended.
 
-For example, if the **Table of Contents** (ToC) header contained the following HTML code with "_Contents_" emphasized as follows:
+For example, if the **Table of Contents** (ToC) header contained the following content with "_Contents_" emphasized as follows:
 
 *`Table of _Contents_`*
 
@@ -103,6 +103,18 @@ Now, the header maintains the intended HTML rendering even after refreshing:
 Previously in {productname}, during Table of Contents (ToC) generation, heading elements containing HTML tags such as `<i>` for italics were incorrectly rendered within the ToC itself.
 
 {productname} {release-version} addresses this issue by encoding the heading element during ToC generation. This ensures that any HTML tags present within the heading element are treated as plain text and displayed literally.
+
+For example, if a heading element contained the following content:
+
+*`My <em>Heading</em>`*
+
+Upon inserting or refreshing the ToC, the heading element would be rendered as HTML, resulting in the following entry:
+
+*`Table of _Contents_`*
+
+Now, the ToC maintains the HTML tags within the heading element as plain text, matching the heading element itself:
+
+*`My <em>Heading</em>`*
 
 For information on the **Table of Contents** plugin, see: xref:tableofcontents.adoc[Table of Contents].
 
